# bluefox_cam_node

./: .gitignore  README.md  bluefox_node.sublime-workspace
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/bluefox_cam_node/: bluefox_camConfig.h  bluefox_cam_nodeConfig.h
catkin_ws/devel/lib/bluefox_cam_node/: bluefox_cam_node
catkin_ws/devel/lib/pkgconfig/: bluefox_cam_node.pc
catkin_ws/devel/lib/python2.7/dist-packages/bluefox_cam_node/cfg/: bluefox_camConfig.py  bluefox_cam_nodeConfig.py
catkin_ws/devel/share/bluefox_cam_node/cmake/: bluefox_cam_nodeConfig.cmake
catkin_ws/devel/share/bluefox_cam_node/docs/: bluefox_camConfig-usage.dox  bluefox_camConfig.wikidoc  bluefox_cam_nodeConfig-usage.dox  bluefox_cam_nodeConfig.dox
catkin_ws/install/: setup.sh
catkin_ws/install/share/bluefox_cam_node/cmake/: bluefox_cam_nodeConfig.cmake
catkin_ws/src/bluefox_cam_node/: CMakeLists.txt  package.xml
catkin_ws/src/bluefox_cam_node/cfg/: bluefox_cam_node.cfg
catkin_ws/src/bluefox_cam_node/include/: Camera.h  Stereosystem.h  bluefox_cam_node.hpp
catkin_ws/src/bluefox_cam_node/include/bluefox_cam_node/: bluefox_node.sublime-workspace
catkin_ws/src/bluefox_cam_node/src/: bluefox_cam_node  bluefox_cam_node.cpp
